frontend/wwwroot/scss/base/interactive_elements.scss
/* ... */
/* For fullscreen mobile */
.select__content-wrapper {
    background: cyan;
}

.select__content.select__content--visible {
    opacity: 1;
    visibility: visible;
}

.select__content-title {
    padding: 5px;
}

/* Desktop */
@media (min-width: variables.$breakpoint--desktop) {
    .select__content {
        position: absolute;
        width: unset;
        height: unset;
        opacity: unset;
        visibility: unset;
        top: unset;
        overflow-y: hidden;
        overflow-x: visible;
        max-height: 0;
        min-width: max-content;
        transition: max-height 0.5s linear;
    }

    .select:hover .select__content {
        max-height: 500px;
    }


    .select__content-wrapper {}
}

// -----------------------
// Slider
// -----------------------

.slider {
    display: inline-block;
}

.slider__content-wrapper {
    // background: red;
}

.slider__content-wrapper {
    // width: 300px;
    // height: 100%;
}

.slider__content--visible {
    // display: flex;
}

.slider__content-wrapper--docked {
    width: 300px;
    height: 100%;
    background: colors.$primary-dark;
}

.slider__content--docked-center {
    justify-content: center;
}

.slider__content--docked-left {
    justify-content: start;
}

.slider__content--docked-right {
    justify-content: end;
}



// .slider {
//     display: inline-block;
// }

// .slider__content {
//     visibility: hidden;
// }

// .slider__content-wrapper {
//     background: red;
// }

// .slider__content-wrapper {
//     width: 300px;
//     height: 100%;
// }

// .slider__content--visible {
//     visibility: visible;
// }

/* DIRECTIONS */
/* Slide in from the left */
.slider__content--from-left {
    top: 0;
    left: -100vw;
    transition: left .2s linear;
}

.slider__content--from-left.slider__content--visible {
    left: 0;
}

/* Slide in from the right */
.slider__content--from-right {
    top: 0;
    left: 100vw;
    transition: left .2s linear;
}

.slider__content--from-right.slider__content--visible {
    left: 0;
}

// /* Slide in from the top */
// .slider__content--from-top {
//     top: -100vh;
//     left: 0;
//     transition: top .2s linear;
// }

// .slider__content--from-top.slider__content--visible {
//     top: 0;
// }

// /* Slide in from the bottom */
// .slider__content--from-bottom {
//     top: 100vh;
//     left: 0;
//     transition: top .2s linear;
// }

// .slider__content--from-bottom.slider__content--visible {
//     top: 0;
// }

.slider__content.slider__content--visible {
    left: 0;
}

// -----------------------
// List
// -----------------------
.list {}

.list__header {}

.list__content {}

.list__content--item {
    padding-left: 20px;
    list-style: none;
}

// -----------------------
// Table
// -----------------------
.table-wrapper {
    overflow-x: auto;
}

table {
    border-collapse: collapse;
    margin: 25px 0;
    font-size: 0.9em;
    min-width: 200px;
    width: 100%;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
}

table thead tr {
    background-color: colors.$primary-dark;
    color: #ffffff;
    text-align: left;
}

.table__sorting-arrow {
    fill: #ffffff;
}

table th,
table td {
    padding: 10px 10px;
}

table tbody tr {
    border-bottom: 1px solid colors.opacity-set(colors.$primary-dark, 25%);
}

table tbody tr:nth-of-type(even) {
    background-color: colors.opacity-set(colors.$primary-dark, 10%);
}

table tbody tr:last-of-type {
    border-bottom: 2px solid colors.$primary-dark;
}

table tbody tr.active-row {
    background-color: colors.opacity-set(colors.$primary-main, 50%);
}

.table__actions {
    //padding: 5px;
}

.table__actions:hover {
    fill: colors.$secondary-main;
}

// ---------------------------
// Tabbed navigation
// ---------------------------
.tabbed-navigation_tabs {
    display: flex;
}

.tabbed-navigation_tab-button {
    background: colors.$primary-dark;
    color: colors.$primary-main;
}

.tabbed-navigation_tab-button:hover {
    background: colors.$primary-main;
    color: colors.$primary-dark;
}

.tabbed-navigation_tab-button.selected,
.tabbed-navigation_tab-content {
    background: colors.opacity-set(colors.$secondary-light, 20%);
    color: colors.$primary-dark;
}

.tabbed-navigation_tab-button {
    width: unset; // remove 100% width from button
}

.tabbed-navigation_tab-content {
    display: none;
    padding: 30px;
}

.tabbed-navigation_tab-content--visible {
    display: block;
}

// ---------------------------
// Carousel
// ---------------------------
.carousel {
    position: relative;
    width: 100%;
    overflow: hidden; /* Ensures no vertical scroll leaks */
}

.carousel-content, .carousel-pagination__content {
    list-style: none;

    overflow-x: scroll;
    touch-action: pan-x;
    scroll-snap-type: x mandatory;
    scroll-behavior: smooth; // this enables built-in smooth scrolling
    -webkit-overflow-scrolling: touch; // improves mobile feel

    scrollbar-width: none; // Hide scrollbar for Firefox
    -ms-overflow-style: none; // Hide scrollbar for IE/Edge

    cursor: grab;
    user-select: none;
}

.carousel-content.dragging,
.carousel-pagination__content.dragging {
    cursor: grabbing;
}

.carousel-content {
    display: flex;
    gap: 50px; /* Consistent gap calculation */
    padding: 10px 50px;
    width: 100%;
    height: 100%;
        touch-action: none;
}

.carousel-pagination__content {
    display: flex;
}

.carousel-content::-webkit-scrollbar, .carousel-pagination::-webkit-scrollbar {
    display: none; /* Hide scrollbar in Chrome/Safari */
}

.carousel-content,
.carousel-pagination__content {
    scroll-snap-type: x mandatory;
}

.carousel-item,
.carousel-pagination__item,
.carousel-pagination__dot {
    scroll-snap-align: center;
}
/* ... */

